Make corrections to the Russian translation

--- a/system/languages/ru.json
+++ b/system/languages/ru.json
@@ -98,7 +98,7 @@
                 "Description": "Описание",
                 "DescriptionHelp": "Отображается только при отправке в чат",
                 "Label": "Название строки",
-                "LabelHelp": "Название для описания тяжести, например \"Среднее\" или \"Тяжелое\".",
+                "LabelHelp": "Название для описания тяжести, например \"Среднее\" или \"Серьёзное\".",
                 "Icon": "Иконка",
                 "IconHelp": "Обычно число по типу 2, 4, 6 или 8. Отображается слева.",
                 "Type": {
@@ -152,7 +152,7 @@
                 "Description": "Пока что не выбрано ни одного условия навыка. Пожалуйста, добавьте одно или несколько условий навыков, чтобы включить возможности автоматизации.",
                 "AddSkillRef": "Добавить условие навыка",
                 "DisableUntil": "Включить, если",
-                "BoxesIf": "маркер(ов) если",
+                "BoxesIf": "маркер(ов), если",
                 "MultipleConditions": "Включить автоматизацию, если",
                 "MultipleConditionsMatches": "условие соответствует",
                 "Actions": {
@@ -168,10 +168,10 @@
                 "Operators": {
                     "OPERATOR_EQUALS": "равняется",
                     "OPERATOR_NOT_EQUALS": "не равняется",
-                    "OPERATOR_GT": "больше чем",
-                    "OPERATOR_LT": "меньше чем",
-                    "OPERATOR_GTE": "больше чем или равняется",
-                    "OPERATOR_LTE": "меньше чем или равняется"
+                    "OPERATOR_GT": "больше",
+                    "OPERATOR_LT": "меньше",
+                    "OPERATOR_GTE": "не меньше",
+                    "OPERATOR_LTE": "не больше"
                 }
             }
         },
@@ -216,7 +216,7 @@
                     "Title": "Настроить Шаблоны",
                     "Label": "Настройки",
                     "CreateNew": "Создать новый шаблон",
-                    "Help": "Пока что нет настроенных шаблонов.<br />Чтобы добавить шаблон, нажмите кнопку <strong>Создать новый шаблон</strong> (также доступна в заголовке окна)."
+                    "Help": "Пока что нет настроенных шаблонов.<br />Чтобы добавить шаблон, нажмите кнопку <strong>Создать новый шаблон</strong> (также доступна в шапке этого окна)."
                 }
             },
             "System": {
