Update magic system name to "Fate Core Unleashed"

--- a/system/languages/en.json
+++ b/system/languages/en.json
@@ -230,7 +230,7 @@
                 "Hint": "Automatically updates the prototype token name when an actors name is changed (if both were identical)."
             },
             "magicSystemEnabled": {
-                "Name": "Enable the magic system from GuildCodex",
+                "Name": "Enable the magic system from Fate Core Unleashed",
                 "Hint": "This will add a magic skill to the character sheet and allow you to use magic dice."
             },
             "enable2d6RollMode": {
