--- a/system/languages/ru.json
+++ b/system/languages/ru.json
@@ -230,7 +230,7 @@
                 "Hint": "Автоматически обновляет имя прототипа токена, когда меняется имя актёра (если они совпадали до этого)."
             },
             "magicSystemEnabled": {
-                "Name": "Включить систему магии из GuildCodex",
+                "Name": "Включить систему магии из Fate Core Unleashed",
                 "Hint": "Эта опция добавит навык магии на лист персонажа и позволит вам использовать магические кости."
             },
             "enable2d6RollMode": {
